--- a/Toxic Comment Classification Challenge/EDA.ipynb
+++ b/Toxic Comment Classification Challenge/EDA.ipynb
@@ -2063,6 +2063,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Issue : Model의 성능이 현저하게 떨어진다.\n",
+    "- 각 label별로 binary classification하다보니 class imbalance가 심하다.\n",
+    "- tokenizing에서 사전 구성이 제대로 안된 것인가.\n",
+    "- BOW 구성할 때, test데이터도 함께 구성해야하는 것인가."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
